--- a/inventory/package.json
+++ b/inventory/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "daisyui": "^2.51.5",
+    "html5-qrcode": "^2.3.8",
     "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
