--- a/inventory/package.json
+++ b/inventory/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
@@ -26,6 +27,7 @@
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-mkcert": "^1.15.0"
   }
 }
